# ComfyUI_ASR

./: README.md  __init__.py  asr_nodes.py  color_picker.py  pyproject.toml  requirements.txt  subtitles2video.py
MW_utils/: hf_download.py
web/: MWColorWiget.js
workflow-examples/: ASR全部节点示例.json
