[project]
name = "asr-mw"
description = "带时间戳、标点符号，自动语音识别。给视频自动添加字幕。"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["faster_whisper", "moviepy", "langid", "jieba"]

[project.urls]
Repository = "https://github.com/billwuhao/ComfyUI_ASR"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mw"
DisplayName = "ComfyUI_ASR"
Icon = ""
